Various improvements
Bring the codebase up to date
